--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.7.2
-Django==5.0.1    
+Django==5.0.1
 et-xmlfile==1.1.0
-openpyxl==3.1.2  
-sqlparse==0.4.4  
-tzdata==2023.4 
+openpyxl==3.1.2
+python-decouple==3.8
+sqlparse==0.4.4
+tzdata==2023.4
