--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
 asgiref==3.7.2
+boto3==1.34.29
+botocore==1.34.29
 Django==5.0.1
+django-ses==3.5.2
 et-xmlfile==1.1.0
+jmespath==1.0.1
 openpyxl==3.1.2
+python-dateutil==2.8.2
 python-decouple==3.8
+pytz==2023.3.post1
+s3transfer==0.10.0
+six==1.16.0
 sqlparse==0.4.4
 tzdata==2023.4
+urllib3==2.0.7
